chore: Add .env to gitignore and clean up Alembic configuration and migration files.

--- a/.env.example
+++ b/.env.example
@@ -4,4 +4,4 @@ SMTP_USER=user@example.com
 SMTP_PASSWORD=secret_password
 SMTP_TLS=True
 EMAILS_FROM_EMAIL=user@example.com
-EMAILS_FROM_NAME="My App"
+EMAILS_FROM_NAME="Framework App"
